@@ -1,3 +1,8 @@
+2003-06-18  ABE Yuji <cbo46560@pop12.odn.ne.jp>
+
+	* [w3m-dev 03914] a fragment in the Referer URI
+	* url.c (otherinfo): strip URI fragment
+
 2003-06-13  Hiroyuki Ito <hito@crl.go.jp>
 
 	* [w3m-dev 03913] fix gif animation support
@@ -7850,4 +7855,4 @@ a	* [w3m-dev 03276] compile error on EWS4800
 	* release-0-2-1
 	* import w3m-0.2.1
 
-$Id: ChangeLog,v 1.841 2003/06/13 15:03:02 ukai Exp $
+$Id: ChangeLog,v 1.842 2003/06/17 18:02:41 ukai Exp $
